navbar fixed, scrollbar styling

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -34,10 +34,6 @@ body {
   margin: 0;
 }
 
-body {
-  background: #000;
-}
-
 /* width */
 ::-webkit-scrollbar {
   width: 8px;
